--- a/jquery practice/assignment/index.html
+++ b/jquery practice/assignment/index.html
@@ -7,5 +7,9 @@
   </head>
   <body>
     <h1>Week 6 Tier 1 Assignment</h1>
+    <input type="text" id="yearIn" placeholder="year">
+    <input type="text" id="makeIn" placeholder="make">
+    <input type="text" id="modelIn" placeholder="model">
+    <button id="addCarButton">Add Car</button>
   </body>
 </html>
