--- a/jquery practice/assignment/index.html
+++ b/jquery practice/assignment/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="scripts/jquery-3.3.1.min.js"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
     <title>Week 6 Tier 1 Assignment</title>
   </head>
