update jquery practice

--- a/jquery practice/assignment/index.html
+++ b/jquery practice/assignment/index.html
@@ -12,5 +12,11 @@
     <input type="text" id="makeIn" placeholder="make">
     <input type="text" id="modelIn" placeholder="model">
     <button id="addCarButton">Add Car</button>
+
+    <div>
+      <ul id="carList">
+      </ul>
+    </div>
+    
   </body>
 </html>
