--- a/To-do List App/server/public/index.html
+++ b/To-do List App/server/public/index.html
@@ -1,16 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>To Do List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="styles/style.css" />
+    <link rel="stylesheet" href="vendors/bootstrap.min.css">
     <script src="vendors/jquery-3.3.1.min.js"></script>
     <script src="scripts/client.js"></script>
 </head>
-<body>
+
+<body class="container">
     <h1>Get It Done</h1>
-    
+    <div id="addTask">
+        <h3>Add a Task</h3>
+        <input type="text" id="categoryIn" value="" placeholder="Category">
+        <input type="text" id="taskIn" value="" placeholder="Task">
+        <input type="text" id="notesIn" value="" placeholder="Notes">
+        <input type="boolean" id="completedIn" value="" placeholder="Completed?">
+        <button id="addTaskButton">Add Task</button>
+    </div>
+
+    <div>
+        <h4>All the Things</h4>
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Task</th>
+                    <th>Notes</th>
+                    <th>Completed?</th>
+                    <th>Delete</th>
+                </tr>
+            </thead>
+            <tbody id="viewTasks">
+            </tbody>
+        </table>
+    </div>
+
 </body>
+
 </html>
