get request on client side done

--- a/To-do List App/server/public/index.html
+++ b/To-do List App/server/public/index.html
@@ -14,7 +14,7 @@
 
 <body class="container">
     <h1>Get It Done</h1>
-    <div id="addTask">
+    <div id="addNewTask">
         <h3>Add a Task</h3>
         <input type="text" id="categoryIn" value="" placeholder="Category">
         <input type="text" id="taskIn" value="" placeholder="Task">
